--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,48 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter");
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Inter';
+}
+
 body{
-    background-color: black;
+    background-color: #560B5C;
+    color: #ffffff;
 }
-h1{
-    color: white;
+
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 10%;
+    background: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+    
 }
-h2{
+
+.logo{
+    font-size: 30px;
     color: white;
+    text-decoration: none;
+    font-weight: 600;
 }
-h3{
-    color: white;
+
+.navbar a{
+    font-size: 20px;
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 20px;
+    transition: .4s;
 }
-dl{
-    color: white;
+
+.navbar a:hover, 
+.navbar a.active{
+    color: #0048FF;
 }
